--- a/fastapi/docker-compose.yml
+++ b/fastapi/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       dockerfile : Dockerfile
     command : celery -A celery_app worker --loglevel=info
     environment:
+      AWS_REGION: ap-south-1
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY : ${AWS_SECRET_ACCESS_KEY}
       CELERY_BROKER_URL : amqp://guest:guest@rabbitmq:5672//
       CELERY_RESULT_BACKEND: rpc://
     depends_on:
@@ -45,8 +48,8 @@ services:
       dockerfile : Dockerfile
     command: celery -A celery_app beat --loglevel=info
     environment:
-      CELERY_BROKER_URL= amqp://guest:guest@rabbitmq:5672//
-      CELERY_RESULT_BACKEND = rpc://
+      CELERY_BROKER_URL : amqp://guest:guest@rabbitmq:5672//
+      CELERY_RESULT_BACKEND : rpc://
     depends_on:
       - rabbitmq
     restart : always
