--- a/fastapi/docker-compose.yml
+++ b/fastapi/docker-compose.yml
@@ -29,6 +29,22 @@ services:
       - rabbitmq
     restart : always
   
+  prometheus:
+    image : prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - fastapi
+    
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3001:3000"
+    depends_on:
+      - prometheus
+  
   celery-worker:
     container_name : celery-worker
     build:
